--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
 			<div class="row no-gutters block-9">
 				<div class="col-md-6 order-md-last d-flex">
-					<form action="http://formspree.io/vtmanakana@email.com" method="POST" class="bg-light p-4 p-md-5 contact-form">
+					<form action="https://formspree.io/f/xjvjzryd" method="POST" class="bg-light p-4 p-md-5 contact-form">
 						<div class="form-group">
 							<input name="name" id="name" type="text" class="form-control" placeholder="Your Name"
 								required>
