--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</div>
 					</div>
 
-					<p><a href="images/Thongoana Victor Manakana CV.pdf" target="_blank"
+					<p><a href="Victor Manakana CV/Victor T. Manakana CV.pdf" target="_blank"
 							class="btn btn-primary py-3 px-3">Download CV</a></p>
 				</div>
 			</div>
