--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
 
 						</div>
 					</div>
-
-					<p><a href="Victor Manakana CV/Victor T. Manakana CV.pdf" target="_blank"
-							class="btn btn-primary py-3 px-3">Download CV</a></p>
+					<p><a class="btn btn-primary py-3 px-3" href="mailto:tvmanakana@gmail.com" target="_blank">Request CV</a></p>
 				</div>
 			</div>
 		</div>
