--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 						</div>
 					</div>
-					<p><a class="btn btn-primary py-3 px-3" href="mailto:tvmanakana@gmail.com" target="_blank">Request CV</a></p>
+					<a class="btn btn-primary py-3 px-3" href="mailto:tvmanakana@gmail.com" target="_blank">Request CV</a>
 				</div>
 			</div>
 		</div>
