--- a/index.html
+++ b/index.html
@@ -547,11 +547,11 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Address</h3>
-							<p>291 Pretorius St, Pretoria Central, Pretoria, 0002</p>
+							<p>Pretoria Central, Pretoria, 0002</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				<!--<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
 							<span class="icon-phone2"></span>
@@ -559,11 +559,11 @@
 						<div>
 							<h3 class="mb-4">Contact Number</h3>
 							<p><a href="tel://0723568351">(+27) 72 3568 351</a></p>
-							<p><a href="tel://0813318464">(+27) 81 3318 464</a></p>
+							
 						</div>
 					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				</div>-->
+				<!--<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
 							<span class="icon-facebook"></span>
@@ -573,9 +573,9 @@
 							<p><a href="https://www.facebook.com/vtmanakana">Victor Manakana</p>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				
-				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				<!--<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box text-center p-4 shadow">
 						<div class="icon d-flex align-items-center justify-content-center">
 							<span class="icon-whatsapp"></span>
@@ -585,7 +585,7 @@
 							<p><a href="https://api.whatsapp.com/send?phone=27723568351">0723568351</a></p>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
 
 
@@ -637,8 +637,8 @@
 	<footer>
 
 		<!-- Copyright -->
-		<div class="footer-copyright text-center py-3">© 2020 Copyright-All right reserved:
-			<a href="http://vtmanakana.com/"> vtmanakana.com</a>
+		<div class="footer-copyright text-center py-3">© 2021 Copyright-All right reserved:
+			<a href="vtmanakana.github.io"> vtmanakana.github.io</a>
 		</div>
 		<!-- Copyright -->
 	</footer>
