--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
 							<p>An autodidactic not famous web designer, dashed with a lil bit of graphic,
-								network designing and a software developing skills. A 3rd year student In
+								network designing and a software developing skills. A graduate from
 								Tshwane University of Technology specialising in Software Development,diploma.
 								He doens't claim to ken everything,but kens enough, and always open for incipient
 								things to learn and acclimate swiftly. He shows great insight in quandary solving
@@ -136,7 +136,7 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date"> January 2017-Present</span>
+								<span class="date"> April 2022</span>
 								<h2>National Diploma in Information Technology (Software Development)</h2>
 								<span class="position">Institution: Tshwane University of Technology</span>
 
@@ -147,7 +147,7 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2011-2015</span>
+								<span class="date">2015</span>
 								<h2>National Senior Certificate</h2>
 								<span class="position">High School</span>
 								<p>2011-2012<br>Institution: Pax College</br>
@@ -161,6 +161,12 @@
 							<div class="resume-wrap d-flex ftco-animate">
 								<div class="icon d-flex align-items-center justify-content-center">
 									<span class="flaticon-ideas"></span>
+								</div>
+								<div class="text pl-3">
+									<span class="date">April 2021 - September 2021</span>
+									<h2>Software Developer Intern</h2>
+									<span class="position">TWKB Talent Centric</span>
+									<p>dfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfjk</p>
 								</div>
 								<div class="text pl-3">
 									<span class="date">2017</span>
