--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/vict.png);">
+							style="background-image:url(images/vic.jpg);">
 						</div>
 					</div>
 				</div>
@@ -632,7 +632,7 @@
 				</div>
 
 				<div class="col-md-6 d-flex">
-					<div class="img" style="background-image: url(images/vict.png);"></div>
+					<div class="img" style="background-image: url(images/vic.jpg);"></div>
 				</div>
 			</div>
 		</div>
