--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<span class="date">April 2021 - September 2021</span>
 									<h2>Software Developer Intern</h2>
 									<span class="position">TWKB Talent Centric</span>
-									<p>dfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfjk</p>
+									<p>Built a chat app for E4 using Xamarin.forms and C# to help clients and admin interactions.</p>
 								</div>
 								<div class="text pl-3">
 									<span class="date">2017</span>
