--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 							<h2 class="mb-4">About Me</h2>
 							<p>An autodidactic not famous web designer, dashed with a lil bit of graphic,
 								network designing and a software developing skills. A graduate from
-								Tshwane University of Technology specialising in Software Development,diploma.
-								He doens't claim to ken everything,but kens enough, and always open for incipient
+								Tshwane University of Technology specialising in Software Development.
+								He doens't claim to ken everything, but knows enough, and always open for incipient
 								things to learn and acclimate swiftly. He shows great insight in quandary solving
-								skills. He can verbalize few peregrine languages like French, Portuguese...I'm kidding
+								skills. He can verbalize few foreign languages like French, Portuguese...I'm kidding
 								I can only speak C++ and in progress with Python and JAVA and conspicuously English
-								!duhh!
+								!duhh! :-)
 								...and ohh he is a tech enthusiast, dotes video games, movies and working in a
 								productive
 								environment because genuinely, I get bored facilely,lets think of it as a motivation for
