--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 						</div>
 					</div>
-					<a class="btn btn-primary py-3 px-3" href="Victor Manakana CV/Thongoana Victor Manakana CV.pdf" target="_blank">Request CV</a>
+					<a class="btn btn-primary py-3 px-3" href="Victor Manakana CV/T.V Manakana CV.pdf" target="_blank">Request CV</a>
 				</div>
 			</div>
 		</div>
